Fixed build error